[metadata]
description_file = "README.md"

[project]
name = "pyrocon"
version = "1.6.0"
authors = [{name="SPiDER", email="mindajitendra63@gmail.com"}]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = ["Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent"]

[egg_info]
tag_build = 
tag_date = 0

